--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
                 <a href="/cadastrar_empresa" class="nav-item">Cadastrar Empresa</a>
                 <a href="/listar_desempregados" class="nav-item">Desempregados</a>
                 <a href="/listar_empresas" class="nav-item">Empresas</a>
+                <a href="login" class="nav-item">login</a>
             </div>
         </nav>
     </header>
