--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}PGD - Plataforma{% endblock %}</title>
+    <title>PGD - Página Inicial</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <header>
         <nav class="top-nav">
             <div class="nav-container">
-
                 <a href="/cadastrar_desempregado#form-section" class="nav-item">Cadastrar Desempregado</a>
                 <a href="/cadastrar_empresa#form-section" class="nav-item">Cadastrar Empresa</a>
-                <!-- <a href="/listar_desempregados#list-section" class="nav-item">Desempregados</a>
-                <a href="/listar_empresas#list-section" class="nav-item">Empresas</a> -->
-                <a href="login" class="nav-item">login</a>
+                <a href="login" class="nav-item">Login</a>
+            </div>
         </nav>
     </header>
-    
-    <main>
-        {% block content %} {% endblock %}
-    </main>
-    <footer>
-        <div class="nav-container"><p>&copy; 2024 PGD - Todos os direitos reservados.</p></div>
-    </footer>
+
+    <div class="page-container">
+        <main class="main-content">
+            <h1>{{ title }}</h1>
+            <p>{{ message }}</p>
+        </main>
+        
+        <footer class="page-footer">
+            <div class="nav-container">
+                <p>&copy; 2024 PGD - Todos os direitos reservados.</p>
+            </div>
+        </footer>
+    </div>
 </body>
-</html>
+</html> 
