--- a/static/login.css
+++ b/static/login.css
@@ -1,102 +1,110 @@
 /* Garantir que a página ocupe a altura total da tela */
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: #ffffff;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-color: #ffffff;
 }
 
 .container {
-    max-width: 350px;
-    background: #f4f5f7;
-    background: linear-gradient(0deg, rgb(250, 248, 248) 0%, rgb(255, 255, 255) 100%);
-    border-radius: 40px;
-    padding: 40px 40px;
-    border: 5px solid rgb(255, 255, 255);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 0px 50px 20px;
-    margin: 20px;
-    height: auto;
+  max-width: 350px;
+  background: #f4f5f7;
+  background: linear-gradient(
+    0deg,
+    rgb(250, 248, 248) 0%,
+    rgb(255, 255, 255) 100%
+  );
+  border-radius: 40px;
+  padding: 40px 40px;
+  border: 5px solid rgb(255, 255, 255);
+  box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 0px 50px 20px;
+  margin: 20px;
+  height: auto;
 }
 
 .heading {
-    text-align: center;
-    font-weight: 900;
-    font-size: 30px;
-    color: rgb(16, 137, 211);
+  text-align: center;
+  font-weight: 900;
+  font-size: 30px;
+  color: rgb(16, 137, 211);
 }
 
 /* Estilos do formulário */
 .form {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 /* Estilos dos campos de entrada */
 .form .input {
-    width: 100%;
-    background: white;
-    border: none;
-    padding: 15px 20px;
-    border-radius: 20px;
-    margin-top: 15px;
-    box-shadow: #cff0ff 0px 10px 10px -5px;
-    border-inline: 2px solid transparent;
+  width: 100%;
+  background: white;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 20px;
+  margin-top: 15px;
+  box-shadow: #cff0ff 0px 10px 10px -5px;
+  border-inline: 2px solid transparent;
 }
 
 /* Estilos do botão */
 .login-button {
-    display: block;
-    width: 100%;
-    font-weight: bold;
-    background: linear-gradient(45deg, rgb(16, 137, 211) 0%, rgb(18, 177, 209) 100%);
-    color: white;
-    padding-block: 15px;
-    margin: 10px auto;
-    border-radius: 20px;
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 20px 10px -15px;
-    border: none;
-    transition: all 0.2s ease-in-out;
+  display: block;
+  width: 100%;
+  font-weight: bold;
+  background: linear-gradient(
+    45deg,
+    rgb(16, 137, 211) 0%,
+    rgb(18, 177, 209) 100%
+  );
+  color: white;
+  padding-block: 15px;
+  margin: 10px auto;
+  border-radius: 20px;
+  box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 20px 10px -15px;
+  border: none;
+  transition: all 0.2s ease-in-out;
 }
 
 /* Efeito hover para o botão */
 .login-button:hover {
-    transform: scale(1.03);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 23px 10px -20px;
+  transform: scale(1.03);
+  box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 23px 10px -20px;
 }
 
 /* Efeito ativo para o botão */
 .login-button:active {
-    transform: scale(0.95);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 15px 10px -10px;
+  transform: scale(0.95);
+  box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 15px 10px -10px;
 }
 
 /* Botão de criação de conta */
 .create-account-button {
-    text-align: center;
-    cursor: pointer;
-    color: rgb(16, 137, 211);
-    font-size: 16px;
-    margin-top: 15px;
-    display: block;
+  text-align: center;
+  cursor: pointer;
+  color: rgb(16, 137, 211);
+  font-size: 16px;
+  margin-top: 15px;
+  display: block;
 }
 
-/* Formulário de criação de conta inicialmente escondido */
+/* Ocultar o formulário de criação de conta inicialmente */
 #signup-form {
-    display: none;
+  display: none;
 }
 
-/* Exibir formulário de criação de conta quando o checkbox for marcado */
+/* Mostrar o formulário de criação de conta quando o checkbox for marcado */
 #show-signup:checked ~ #signup-form {
-    display: block;
+  display: block;
 }
 
 /* Ocultar o formulário de login quando o checkbox for marcado */
 #show-signup:checked ~ #login-form {
-    display: none;
+  display: none;
 }
 
-/* Ocultar o botão de "Criar Conta" quando o formulário de login estiver visível */
+/* Ocultar o botão de "Create Account" quando o checkbox for marcado */
 #show-signup:checked ~ .create-account-button {
-    display: none;
+  display: none;
 }
