--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,10 @@
                 alt="Logotipo"
                 class="logo" />
             </a>
-            
- <div class="page-container">
-        <main class="main-content">
-            <p>{{ message }}</p>
-        </main>
         
-        <footer class="page-footer">
+        <!-- <footer class="page-footer">
             <div class="nav-container">
-                <p>&copy; 2024 PGD - Todos os direitos reservados.</p>
+                <p>&copy; 2024 PGD - Todos os direitos reservados.</p> -->
             <!-- Botão -->
             <a href="/" class="button-container">
               <div
@@ -62,6 +57,11 @@
           </div>
         </nav>
       </header>
+
+      <div class="page-container"></div>
+        <main class="main-content">
+            <p>{{ message }}</p>
+        </main>
     </div>
 
  </body>
