--- a/templates/cadastrar_empresa.html
+++ b/templates/cadastrar_empresa.html
@@ -21,6 +21,7 @@
                 <a href="/cadastrar_desempregado#form-section" class="nav-item">Cadastrar Desempregado</a>
                 <a href="/cadastrar_empresa#form-section" class="nav-item">Cadastrar Empresa</a>
                 <a href="login" class="nav-item">Login</a>
+                <a href="/empresa/{{ empresa_id }}" class="nav-item">Ver Empresa</a>
             </div>
         </nav>
     </header>
