--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,18 @@
     <title>{{ title }}</title>
   </head>
   <body>
+    <nav class="navbar">
+      <ul class="navbar-list">
+        <li class="navbar-item"><a href="/">Home</a></li>
+        <li class="navbar-item">
+          <a href="/cadastrar_desempregado">Cadastrar Desempregado</a>
+        </li>
+        <li class="navbar-item">
+          <a href="/cadastrar_empresa">Cadastrar Empresa</a>
+        </li>
+        <li class="navbar-item"><a href="/login">Login</a></li>
+      </ul>
+    </nav>
     <div class="container">
       <div class="heading">Sign In</div>
 
@@ -89,6 +101,5 @@
         <input class="login-button" type="submit" value="Create Account" />
       </form>
     </div>
-</body>
+  </body>
 </html>
-
