finalisando a pagina de login

--- a/static/register.css
+++ b/static/register.css
@@ -46,8 +46,8 @@ body {
   border-inline: 2px solid transparent;
 }
 
-/* Botão de login */
-.login-button {
+/* Botão de registro */
+.register-button {
   display: block;
   width: 100%;
   font-weight: bold;
@@ -65,42 +65,22 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-.login-button:hover {
+.register-button:hover {
   transform: scale(1.03);
   box-shadow: rgba(133, 189, 215, 0.88) 0px 23px 10px -20px;
 }
 
-.login-button:active {
+.register-button:active {
   transform: scale(0.95);
   box-shadow: rgba(133, 189, 215, 0.88) 0px 15px 10px -10px;
 }
 
-/* Botão de criação de conta */
-.create-account-button {
+/* Link para voltar ao login */
+.back-to-login {
   text-align: center;
   cursor: pointer;
   color: rgb(16, 137, 211);
   font-size: 16px;
   margin-top: 15px;
   display: block;
-}
-
-/* Ocultar o formulário de criação de conta inicialmente */
-#signup-form {
-  display: none;
-}
-
-/* Mostrar o formulário de criação de conta quando o checkbox for marcado */
-#show-signup:checked ~ #signup-form {
-  display: block;
-}
-
-/* Ocultar o formulário de login quando o checkbox for marcado */
-#show-signup:checked ~ #login-form {
-  display: none;
-}
-
-/* Ocultar o checkbox para alternar entre os formulários */
-#show-signup {
-  display: none;
 }
