--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,6 @@
         <nav class="top-nav">
 
           <div class="nav-container">
-            <!-- Logotipo no canto esquerdo -->
-
-
           <div class="nav-container flex justify-between items-center">
 
             <!-- Botão -->
@@ -32,7 +29,27 @@
               <a href="/cadastrar_desempregado" class="nav-item" > Desempregado</a >
               <a href="/cadastrar_empresa" class="nav-item" > Empresa</a>
               <a href="/login" class="nav-item">Login</a>
+              <a href="/register" class="nav-item">register</a>
             </div>
+             <!-- Botão de Perfil -->
+          <div class="button-container">
+            <a href="/profile" class="button" aria-label="Perfil">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="1em"
+                height="1em"
+                viewBox="0 0 24 24"
+                stroke-width="0"
+                fill="currentColor"
+                stroke="currentColor"
+                class="icon"
+              >
+                <path
+                  d="M12 2.5a5.5 5.5 0 0 1 3.096 10.047 9.005 9.005 0 0 1 5.9 8.181.75.75 0 1 1-1.499.044 7.5 7.5 0 0 0-14.993 0 .75.75 0 0 1-1.5-.045 9.005 9.005 0 0 1 5.9-8.18A5.5 5.5 0 0 1 12 2.5ZM8 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"
+                ></path>
+              </svg>
+            </a>
+          </div>
           </div>
         </nav>
       </header>
