--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,9 @@
 
           <!-- Botão de Perfil -->
           <div class="button-container">
-            <a href="/profile" class="button" aria-label="Perfil">
+            <a href="profile.html" class="button" aria-label="Perfil">
               <svg
-                xmlns="http://www.w3.org/2000/svg"
+                xmlns="http://www.w3.org/20/svg"
                 width="1em"
                 height="1em"
                 viewBox="0 0 24 24"
